--- a/Module7/Module7.csproj
+++ b/Module7/Module7.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DumbPlayer\DumbPlayer.cs" />
+    <Compile Include="GreenPlayer\GreenPlayer.cs" />
     <Compile Include="Grid.cs" />
     <Compile Include="GridEntry.cs" />
     <Compile Include="IPlayer.cs" />
